Add <S> element to html-like labels

--- a/doc/infosrc/html.1
+++ b/doc/infosrc/html.1
@@ -5,10 +5,12 @@ that are newer than mid-November 2003. In particular, it is not part
 of release 1.10.</EM>
 <P>
 <B>NOTE:</B><EM>The font markups for bold, italic, underlining, subscript and 
-superscript </EM>(<TT>&lt;B&gt;</TT>, <TT>&lt;I&gt;</TT>, <TT>&lt;U&gt;</TT>, <TT>&lt;SUB&gt</TT>; and <TT>&lt;SUP&gt;</TT>) 
-<EM>are only available in versions after 14 October 2011, and are
+superscript </EM>(<TT>&lt;B&gt;</TT>, <TT>&lt;I&gt;</TT>, <TT>&lt;U&gt;</TT>, <TT>&lt;SUB&gt</TT> and <TT>&lt;SUP&gt;</TT>) 
+<EM>are only available in versions after 14 October 2011, and 
+the markup for strike-through (<TT>&lt;S&gt;</TT>) requires versions later than 15 September 2013.
+In addition, all of these markups are
 currently only available via the cairo and svg renderers.
-In addition, the horizontal and vertical rules </EM>(<TT>&lt;HR&gt;</TT> and <TT>&lt;VR&gt;</TT>)
+The horizontal and vertical rules </EM>(<TT>&lt;HR&gt;</TT> and <TT>&lt;VR&gt;</TT>)
 <EM>are only available in versions
 later than 8 July 2011.
 </EM>
