--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -135,6 +135,12 @@ Attribute values must appear in double quotes.
 &gt;
 </PRE>
 <P>
+  &lt;!-- Strike-through text --&gt;
+<PRE>&lt;S
+  &lt;!-- No attributes --&gt;
+&gt;
+</PRE>
+<P>
   &lt;!-- Horizontal rule --&gt;
 <PRE>&lt;HR
   &lt;!-- No attributes --&gt;
