--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+September 15, 2013
+	- Add <S> element for strike-through to HTML-like labels.
 September 6, 2013
 	- Release 2.34.0
     - New version of xdot supporting inline text characteristics such as <b> and
