Note what the annotation "write only" signifies.

--- a/doc/infosrc/attrs.1
+++ b/doc/infosrc/attrs.1
@@ -76,4 +76,9 @@ characters E, N, G, S and C
 represent edges, nodes, the root graph, subgraphs
 and cluster subgraphs, respectively.
 This field indicates which graph component uses the attribute.
+<P>
+In the <STRONG>Notes</STRONG> field, an annotation of <em>write only</em> 
+indicates that the attribute is used for output, and is not used or read by any
+of the layout programs.
 <HR ALIGN=CENTER WIDTH="70%" SIZE=3>
+
