Document sides attribute of html tables.

--- a/doc/infosrc/html.3
+++ b/doc/infosrc/html.3
@@ -20,4 +20,25 @@ Here is an example using an &lt;IMG&gt; element
 <IMG SRC=html4.gif>
 <P>
 with the <A HREF=html4.gv>input graph</A>.
-
+<P>
+The <tt>sides</tt> attribute (version 2.37 and later) allows one to combine cells to form 
+various non-convex shapes. For example, a <tt>tee-shaped</tt> node
+<P>
+<IMG SRC=tee.gif>
+<P>
+can be produced using
+<XMP>
+  tee [shape=none margin=0 label=
+    <<table border="0" cellspacing="0" cellborder="1">
+     <tr>
+      <td width="9" height="9" fixedsize="true" style="invis"></td>
+      <td width="9" height="9" fixedsize="true" sides="ltr"></td>
+      <td width="9" height="9" fixedsize="true" style="invis"></td>
+     </tr>
+     <tr>
+      <td width="9" height="9" fixedsize="true" sides="tlb"></td>
+      <td width="9" height="9" fixedsize="true" sides="b"></td>
+      <td width="9" height="9" fixedsize="true" sides="brt"></td>
+     </tr>
+    </table>>]
+</XMP>
