--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+March 4, 2014
+	- Fix bugs in gvpr and gv.cpp so edges can be created in subgraphs.
+	- Add edgepaint program for coloring edges to make them easier to tell apart.
+	- Modify neato to avoid unnecessary translations of output. This allows positions
+      given on input to remain the same on output.
+	- Fix swig java package to work and support gv.renderresult.
+	- Fix test for the absence of layout (old test relied on statically allocated Agraphinfo_t).
+	- HTML-like tables and cells can now specify which borders should be drawn.
+	- The fixedsize attribute now takes the value "shape" which allows labels much larger than the
+      node shape.
 January 11, 2014
 	- Release 2.36.0
 	- Resolves bugs: 2372, 2384, 2388, 2391, 2392, 2383, 2395, 2401, 2406
