Add documentation for using <O>..</O>

--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -119,8 +119,14 @@ Attribute values must appear in double quotes.
 &gt;
 </PRE>
 <P>
-  &lt;!-- Underlined text --&gt;
+  &lt;!-- Underline text --&gt;
 <PRE>&lt;U
+  &lt;!-- No attributes --&gt;
+&gt;
+</PRE>
+<P>
+  &lt;!-- Overline text --&gt;
+<PRE>&lt;O
   &lt;!-- No attributes --&gt;
 &gt;
 </PRE>
