Update documentation for packing in dot and the general use of the scale attribute.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+March 27, 2014
+	- Enable packing for dot
+	- Allow scaling to work for all non-dot layouts
 March 9, 2014
 	- Add overline text characteristic.
 March 4, 2014
