Add X and Y attributes to nodes

--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -309,6 +309,12 @@ the outdegree of a node.
 \fBdegree\fR : \fBint\fR
 the degree of a node.
 .TP
+\fBX\fR : \fBdouible\fR
+the X coordinate of a node. (Assumes the node has a \fIpos\fP attribute.)
+.TP
+\fBY\fR : \fBdouible\fR
+the Y coordinate of a node. (Assumes the node has a \fIpos\fP attribute.)
+.TP
 \fBroot\fR : \fBgraph_t\fR
 the root graph of an object. The root of a root graph
 is itself.
